[metadata]
name = Abu
version = 1.0.0
author = superlong
author_email = 1171213017@qq.com
description = Your package description
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
home_page = http://your-project-home-page.com
license = MIT
classifier =
    Private :: Do Not Upload
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    pandas==0.20.1
    sqlalchemy==1.1.9
    matplotlib==2.0.2
    numpy==1.12.1
    scipy==0.19.0
    scikit-learn==0.18.1
    seaborn==0.7.1
    statsmodels==0.8.0
    cython==0.25.2
    babel==2.4.0
    bokeh==0.12.5
    boto==2.46.1
    chardet==3.0.3
    cloudpickle==0.2.2
    tushare
    # other dependencies

[test]
test_suite = your_package.tests

[sdist]
dist_dir = output/dist

[bdist_wheel]
dist_dir = output/dist
